[Enhancement #209] Add integration test for reading data property referenced lists.